<resources>
    <!-- english -->
    <!-- general -->
    <string name="app_name">Ffriend</string>
    <string name="title_activity_maps">Map</string>

    <!-- edit text hint form -->
    <string name="englishHintEmail">Email</string>
    <string name="englishHintPassword">Password</string>
    <string name="englishHintPasswordConfirmation">Retype-passwrod</string>
    <string name="englishHintPhoneNumber">Phone number</string>
    <string name="englishHintUsername">Username</string>
    <string name="englishHintAge">Age Example: 21</string>
    <string name="englishHintBio">About me</string>
    <string name="englishHintGender">Male/Female</string>

    <!-- database key make sure dont have space in between and make sure same with Firestore field-->
    <!-- users -->
    <string name="dbUsers">users</string>
    <string name="dbUserame">username</string>
    <string name="dbEmail">email</string>
    <string name="dbPhoneNumber">phonenumber</string>
    <string name="dbLon">lon</string>
    <string name="dbLat">lat</string>
    <string name="dbAvatarUrl">avatarurl</string>
    <string name="dbBio">biography</string>
    <string name="dbAge">age</string>
    <!-- chats -->
    <string name="dbChats">chats</string>
    <string name="dbMessages">messages</string>
    <string name="dbMessage">message</string>
    <string name="dbStartConversation">startconversation</string>
    <string name="dbParticipants">participants</string>
    <string name="dbParticipant">participants</string>
    <string name="dbSenderUid">senderuid</string>
    <string name="dbSentMessage">sentmessage</string>
    <string name="dbPoints">points</string>
    <string name="dbUsersMet">users met</string>

    <!-- intent -->
    <string name="intetntOhterUser">OTHER_USER</string>

    <!-- login -->
    <!-- login xml -->
    <string name="loginLoginButton">Login</string>
    <string name="loginSingUpButton">Sign up</string>
    <!-- login activity -->
    <string name="loginMessageLoginSuccess">Welcome back!</string>
    <string name="loginMessageLoginFailed">Please try again</string>
    <string name="noEmailStringWarning">please input email</string>
    <string name="noPasswordStringWarning">please input password</string>
    <!-- progress dialog -->
    <string name="progressDiablogLoginTitle">Trying to login</string>
    <string name="progressDiablogLoginMessage">Please wait, wont be long</string>

    <!-- register-->
    <!-- register xml -->
    <string name="registerRegisterButton">Register</string>
    <string name="registerCancelButton">Cancel</string>
    <!-- register activity -->
    <string name="registerMessageRegisterSuccess">Success</string>
    <string name="registerMessageRegisterFailed">Please try again</string>
    <string name="registerMessagePasswordUnmatched">Password do not match</string>

    <string name="noPhoneNumberStringWarning">please input phone number</string>
    <string name="noConfirmPasswordStringWarning">please retype password</string>
    <string name="noUsernameStringWarning">please input username</string>

    <!-- profile setup-->
    <!-- profile setup xml -->
    <string name="profileSetupSetButton">Submit</string>
    <string name="profileSetupSkipButton">Skip</string>
    <!-- profile setup activity -->

    <!-- profile -->
    <!-- profile xml -->
    <string name="profileDefaultUsername">Kevin Jason</string>
    <string name="profileDefaultAge"> 19</string>
    <string name="profileGenderMale">Male</string>
    <string name="profileGenderFemale">Female</string>
    <string name="profileSeperator">|</string>
    <string name="profileDefaultDescription">        In a library, the word biography refers both to a kind of book and to a section where books of that kind are found. Each biography tells the story of a real person\'s life. A biography may be about someone who lived long ago, recently, or even someone who is still living, though in the last case it must necessarily be incomplete. The term autobiograp</string>
    <string name="profileSetupMessageGenderWrong">Please pick a gender</string>
    <string name="profileSetupMessageInputEmpty">Please fill all inputs</string>
    <string name="dbGender">gender</string>
    <string name="profileSetupMessageAgeWrong">Age needs to be between 16 and 150</string>
    <!-- profile activity -->
    <string name="startChatException">User that cannot be found!</string>
    <string name="chat_message_chat_view_message">cannot display message</string>
    <string name="chatMessageExceedLimit">Message is too long, make sure it is less than 250 characters</string>
    <string name="loginResetPassword">Forgot password</string>
    <string name="loginWarningResetPasswordNoEmail">Please put the email in order to reset the password</string>
    <string name="loginResePasswordSuccess">Please check your email, it may take up to 5 minutes</string>
    <string name="loginWarningResetPasswordUnsuccess">Please check the email or make a new account with this email address</string>
    <string name="registerWarningInputEmpty">Please fill all the fields</string>
    <string name="noBioStringWarning">Please fill about your self</string>
    <string name="noAgeStringWarning">Please fill your age</string>
    <string name="profileSetupMessageDescriptionWrong">Description must be at least 10 character and maximum 250 characters</string>
    <string name="registerMessagePasswordTooShort">Password need to be at least 8 characters</string>
    <string name="qrScanSuccessful">Points acquired</string>

    <!-- chat -->
    <!-- chat activity -->

</resources>
