<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="@dimen/profileCardVewHeight"
    android:background="@drawable/background_profile_card_view"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/profileCardViewMargin"
            android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cardview_hook"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/profileCardViewMargin"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:padding="@dimen/profileCardViewPadding"
                    android:background="@color/cardViewDefaultBg"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6"
                            android:gravity="center_horizontal">
                                <ImageView
                                    android:id="@+id/avatarImageView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:src="@drawable/avatar_default" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2.8"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                                <TextView
                                    android:id="@+id/profileUserNameInfo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorGreenDefault"
                                    android:textSize="22sp"
                                    android:textStyle="bold" />
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal"
                                    android:orientation="horizontal">
                                        <TextView
                                            android:id="@+id/profileAgeInfo"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textColor="@color/colorGreenDefault"
                                            android:textStyle="italic"
                                            android:textSize="@dimen/textViewDefault"
                                            android:text="21"/>
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textColor="@color/colorGreenDefault"
                                            android:textStyle="italic"
                                            android:textSize="@dimen/textViewDefault"
                                            android:text="@string/profileSeperator"/>
                                        <TextView
                                            android:id="@+id/profileGenderInfo"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textColor="@color/colorGreenDefault"
                                            android:textStyle="italic"
                                            android:textSize="@dimen/textViewDefault"
                                            android:text="@string/profileGenderMale"/>
                                </LinearLayout>
                        </LinearLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="5.5">

                                <TextView
                                    android:id="@+id/profileBioInfo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/profileDefaultDescription"
                                    android:textColor="@color/cardViewProfileDescription"
                                    android:textSize="@dimen/textViewDefault"
                                    android:textStyle="italic" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Current point is:"
                                    android:id="@+id/profilePointsInfo"
                                    android:textColor="@color/cardViewProfilePointString"/>
                        </RelativeLayout>
                </LinearLayout>
        </LinearLayout>
</LinearLayout>
